--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,24 +4,54 @@
 body {
     margin:0;
     padding:0;
-    font-family: 'Open sans', sans-serif;;
+    font-family: 'Open sans', sans-serif;
+    color:#fff;
+    background-color: #666060;
+
 }
 
 .header {
     text-align: center;
 }
 
+.guide {
+  
+    padding:1em;
+}
+
+
+
 .generator {
+
+    margin:0 auto;
+    padding:1em;
     height:60vh;
+    width:80%;
     display:flex;
     align-items: center;
     justify-content: center;
+    background-color: #666060;
     flex-direction: column;
+    border-radius: 20px;
+    border:2px solid #ccbfbf;
     &_text {
-        width:50vh;
+        width:40%;;
+        font-size:16px;
+        height:2em;
+        padding:1em;
+        border-radius: 10px;
+        
+
     }
     &_field {
         width:30vh;
+     
     }
 
+
 }
+
+.buttons {
+    padding:1em;
+}
+
