--- a/scss/main.css
+++ b/scss/main.css
@@ -29,16 +29,54 @@ body {
   border: 2px solid #ccbfbf;
 }
 .generator_text {
-  width: 40%;
-  font-size: 16px;
-  height: 2em;
-  padding: 1em;
+  width: 60%;
+  padding: 10px;
+  border: 1px solid #332f2f;
   border-radius: 10px;
-}
-.generator_field {
-  width: 30vh;
+  text-align: center;
 }
 
 .buttons {
   padding: 1em;
+  margin: 1em;
+}
+.buttons_btn {
+  border-radius: 8px;
+  padding: 10px;
+  border: none;
+  background-color: #332f2f;
+  color: #ccbfbf;
+}
+.buttons_btn:hover {
+  background-color: #afa4a4;
+  color: #050505;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 30vh;
+  height: 15px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  transition: opacity 0.2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #050505;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: #131212;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
