--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,17 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 
+$primary-color:  #666060;
+$secondary-color: #575353;
+
 body {
     margin:0;
     padding:0;
     font-family: 'Open sans', sans-serif;
     color:#fff;
-    background-color: #666060;
+    background: linear-gradient(
+        to right,
+        rgba($primary-color, 0.9), 
+        rgba($primary-color, 0.6)
+        ),
 
 }
 
 .header {
     text-align: center;
+    font-size: 1em;
 }
 
 .guide {
@@ -24,13 +32,19 @@ body {
 .generator {
 
     margin:0 auto;
+    margin-bottom:3em;
     padding:1em;
     height:70vh;
     width:80%;
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: #666060;
+    background:linear-gradient(
+        to right,
+        rgba($primary-color, 0.9), 
+        rgba($primary-color, 0.6)
+        ),;
+
     flex-direction: column;
     border-radius: 20px;
     border:2px solid #ccbfbf;
@@ -44,6 +58,7 @@ body {
     }
     &_field {
         width: 25vh;
+        height:2em;
         border-radius:20px;
         background-color: #ada6a6;
     }
@@ -69,7 +84,7 @@ body {
 
 }
 
-
+// Slider parts
 .slider {
     -webkit-appearance: none;
     width: 30vh;
@@ -99,3 +114,26 @@ body {
     background-color: #131212;
     cursor: pointer;
   }
+
+  .bottom {
+    margin:0 auto;
+    width:80%;
+    text-align: center;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    border-top:1px solid #fff;
+    gap:1em;
+
+    &_link {
+        text-decoration: none;
+        &_icon:hover {
+            color:#050505;
+            position:relative;
+            top:1px;
+        }
+    }
+    
+  }
+
+  
