--- a/scss/main.scss
+++ b/scss/main.scss
@@ -56,12 +56,14 @@ body {
         border-radius: 10px;
         text-align: center;
         
+        
     }
     &_field {
         width: 25vh;
         height:2em;
         border-radius:20px;
         background-color: #ada6a6;
+        border:none;
     }
    
 
